[gd_scene load_steps=42 format=2]

[ext_resource path="res://duckie.png" type="Texture" id=1]
[ext_resource path="res://scripts/onlineplayer_script.gd" type="Script" id=2]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://coins and small stuff.png" type="Texture" id=4]
[ext_resource path="res://scripts/moneylabel.gd" type="Script" id=5]
[ext_resource path="res://scenes/phone gui.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 7.5 )

[sub_resource type="Animation" id=17]
resource_name = "FLY"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=18]
resource_name = "open wings"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "FLY"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "open wings"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/FLY/node = SubResource( 19 )
states/FLY/position = Vector2( 228.333, 228.333 )
states/death/node = SubResource( 31 )
states/death/position = Vector2( 817, 71 )
states/idle/node = SubResource( 5 )
states/idle/position = Vector2( 513.667, 68.3333 )
"states/open wings/node" = SubResource( 20 )
"states/open wings/position" = Vector2( 514.112, 138.556 )
states/walk/node = SubResource( 6 )
states/walk/position = Vector2( 765.667, 215.889 )
transitions = [ "walk", "idle", SubResource( 7 ), "idle", "walk", SubResource( 8 ), "FLY", "idle", SubResource( 21 ), "FLY", "walk", SubResource( 22 ), "idle", "open wings", SubResource( 23 ), "walk", "open wings", SubResource( 24 ), "open wings", "FLY", SubResource( 25 ), "open wings", "idle", SubResource( 28 ), "open wings", "walk", SubResource( 29 ), "idle", "death", SubResource( 32 ), "open wings", "death", SubResource( 33 ), "walk", "death", SubResource( 34 ), "FLY", "death", SubResource( 35 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="RectangleShape2D" id=11]

[sub_resource type="ViewportTexture" id=46]
viewport_path = NodePath("ui/ViewportContainer/UI")

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.403922, 0.282353, 0, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0, 0.580392, 0.321569, 0.611765 )

[sub_resource type="Theme" id=38]
ProgressBar/styles/bg = SubResource( 42 )
ProgressBar/styles/fg = SubResource( 43 )

[sub_resource type="StyleBoxFlat" id=44]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0, 0.580392, 0.321569, 0.611765 )

[sub_resource type="Theme" id=41]
ProgressBar/styles/bg = SubResource( 44 )
ProgressBar/styles/fg = SubResource( 45 )

[node name="playerduckie" type="KinematicBody2D"]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FLY = SubResource( 17 )
anims/RESET = SubResource( 2 )
anims/death = SubResource( 30 )
anims/idle = SubResource( 3 )
"anims/open wings" = SubResource( 18 )
anims/walk = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 3, 3 )
script = ExtResource( 3 )

[node name="item1" type="Node2D" parent="."]
position = Vector2( 85, -240 )
scale = Vector2( 2, 2 )
z_index = 1

[node name="item2" type="Node2D" parent="."]
position = Vector2( 237, -240 )
scale = Vector2( 2, 2 )
z_index = 1

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 11 )

[node name="hrot" type="Node2D" parent="."]
scale = Vector2( 3, 3 )
z_index = 1

[node name="helditem" type="Node2D" parent="hrot"]
position = Vector2( 16, 0 )
scale = Vector2( 0.25, 0.25 )

[node name="rot" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="erot" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="shopui" type="CanvasLayer" parent="."]

[node name="ui" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="ui"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0

[node name="UI" type="Viewport" parent="ui/ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="phone gui" parent="ui/ViewportContainer/UI" instance=ExtResource( 6 )]

[node name="gui" type="Sprite" parent="ui"]
position = Vector2( 512, 300 )
texture = SubResource( 46 )
flip_v = true

[node name="ProgressBar" type="ProgressBar" parent="ui"]
margin_left = 387.0
margin_top = 563.0
margin_right = 637.0
margin_bottom = 583.0
theme = SubResource( 38 )
value = 50.0
percent_visible = false

[node name="ProgressBar2" type="ProgressBar" parent="ui"]
margin_left = 387.0
margin_top = 563.0
margin_right = 637.0
margin_bottom = 583.0
theme = SubResource( 41 )
value = 80.0
percent_visible = false

[node name="Panel" type="Panel" parent="ui"]
margin_left = 909.0
margin_top = 12.0
margin_right = 979.0
margin_bottom = 52.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="Label" type="Label" parent="ui/Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 37.0
margin_bottom = 7.0
text = "100"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="ui/Panel"]
position = Vector2( 49, 20 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
hframes = 3
vframes = 3

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
